# serializer version: 1
# name: TestEvaluatedSiaeSanctionView.test_no_sanction
  '''
  <div class="card-body">
      <h2>
          Sanction
      </h2>
      <h3 class="mt-5">
          Ne pas sanctionner
      </h3>
      <div class="card">
          <div class="card-body">
              Ça ira pour cette fois.
          </div>
      </div>
  </div>
  
  '''
# ---
# name: TestEvaluatedSiaeSanctionView.test_permanent_suspension
  '''
  <div class="card-body">
      <h2>
          Sanction
      </h2>
      <h3 class="mt-5">
          Retrait définitif de la capacité d’auto-prescription
      </h3>
      <p>
          La capacité à prescrire un parcours est rompue, elle peut être rétablie par le préfet, à la demande de la structure, sous réserve de la participation de ses dirigeants ou salariés à des actions de formation définies par l'autorité administrative.
      </p>
      <p>
          Dans votre cas, le retrait définitif de la capacité d’auto-prescription sera effectif à partir du 1 janvier 2023.
      </p>
  </div>
  
  '''
# ---
# name: TestEvaluatedSiaeSanctionView.test_subsidy_cut_full
  '''
  <div class="card-body">
      <h2>
          Sanction
      </h2>
      <h3 class="mt-5">
          Suppression
                                      
                                      de l’aide au poste
      </h3>
      <p>
          La suppression de l’aide attribuée aux salariés s’apprécie par l'autorité administrative, par imputation de l’année N+1. Cette notification s’accompagne d’une demande conforme auprès de l’ASP de la part du préfet. Lorsque le département a participé aux aides financières concernées en application de l'article L. 5132-2, le préfet informe le président du conseil départemental de sa décision en vue de la récupération, le cas échéant, des montants correspondants.
      </p>
      <p>
          Dans votre cas, la suppression
                                      
                                      de l’aide au poste sera effective à partir du 1 janvier 2023 et jusqu’au 1 juin 2023.
      </p>
  </div>
  
  '''
# ---
# name: TestEvaluatedSiaeSanctionView.test_subsidy_cut_rate[card]
  '''
  <div class="card-body">
      <h2>
          Sanction
      </h2>
      <h3 class="mt-5">
          Suppression
                                      d’une partie
                                      de l’aide au poste
      </h3>
      <p>
          La suppression de l’aide attribuée aux salariés s’apprécie par l'autorité administrative, par imputation de l’année N+1. Cette notification s’accompagne d’une demande conforme auprès de l’ASP de la part du préfet. Lorsque le département a participé aux aides financières concernées en application de l'article L. 5132-2, le préfet informe le président du conseil départemental de sa décision en vue de la récupération, le cas échéant, des montants correspondants.
      </p>
      <p>
          Dans votre cas, la suppression
                                      
                                          de 35 %
                                      
                                      de l’aide au poste sera effective à partir du 1 janvier 2023 et jusqu’au 1 juin 2023.
      </p>
  </div>
  
  '''
# ---
# name: TestEvaluatedSiaeSanctionView.test_subsidy_cut_rate[queries]
  dict({
    'num_queries': 15,
    'queries': list([
      dict({
        'origin': list([
          'SessionStore._get_session_from_db[<site-packages>/django/contrib/sessions/backends/db.py]',
        ]),
        'sql': '''
          SELECT "django_session"."session_key",
                 "django_session"."session_data",
                 "django_session"."expire_date"
          FROM "django_session"
          WHERE ("django_session"."expire_date" > %s
                 AND "django_session"."session_key" = %s)
          LIMIT 21
        ''',
      }),
      dict({
        'origin': list([
          'ItouCurrentOrganizationMiddleware.__call__[utils/perms/middleware.py]',
        ]),
        'sql': '''
          SELECT "users_user"."id",
                 "users_user"."password",
                 "users_user"."last_login",
                 "users_user"."is_superuser",
                 "users_user"."username",
                 "users_user"."first_name",
                 "users_user"."last_name",
                 "users_user"."is_staff",
                 "users_user"."is_active",
                 "users_user"."date_joined",
                 "users_user"."address_line_1",
                 "users_user"."address_line_2",
                 "users_user"."post_code",
                 "users_user"."city",
                 "users_user"."department",
                 "users_user"."coords",
                 "users_user"."geocoding_score",
                 "users_user"."geocoding_updated_at",
                 "users_user"."ban_api_resolved_address",
                 "users_user"."insee_city_id",
                 "users_user"."title",
                 "users_user"."full_name_search_vector",
                 "users_user"."email",
                 "users_user"."phone",
                 "users_user"."kind",
                 "users_user"."identity_provider",
                 "users_user"."has_completed_welcoming_tour",
                 "users_user"."created_by_id",
                 "users_user"."external_data_source_history",
                 "users_user"."last_checked_at",
                 "users_user"."public_id",
                 "users_user"."address_filled_at",
                 "users_user"."first_login",
                 "users_user"."upcoming_deletion_notified_at",
                 "users_user"."allow_next_sso_sub_update"
          FROM "users_user"
          WHERE "users_user"."id" = %s
          LIMIT 21
        ''',
      }),
      dict({
        'origin': list([
          'extract_membership_infos_and_update_session[utils/perms/middleware.py]',
          'ItouCurrentOrganizationMiddleware.__call__[utils/perms/middleware.py]',
        ]),
        'sql': '''
          SELECT "institutions_institutionmembership"."id",
                 "institutions_institutionmembership"."user_id",
                 "institutions_institutionmembership"."joined_at",
                 "institutions_institutionmembership"."is_admin",
                 "institutions_institutionmembership"."is_active",
                 "institutions_institutionmembership"."created_at",
                 "institutions_institutionmembership"."updated_at",
                 "institutions_institutionmembership"."institution_id",
                 "institutions_institutionmembership"."updated_by_id",
                 "institutions_institution"."id",
                 "institutions_institution"."address_line_1",
                 "institutions_institution"."address_line_2",
                 "institutions_institution"."post_code",
                 "institutions_institution"."city",
                 "institutions_institution"."department",
                 "institutions_institution"."coords",
                 "institutions_institution"."geocoding_score",
                 "institutions_institution"."geocoding_updated_at",
                 "institutions_institution"."ban_api_resolved_address",
                 "institutions_institution"."insee_city_id",
                 "institutions_institution"."name",
                 "institutions_institution"."created_at",
                 "institutions_institution"."updated_at",
                 "institutions_institution"."uid",
                 "institutions_institution"."active_members_email_reminder_last_sent_at",
                 "institutions_institution"."automatic_geocoding_update",
                 "institutions_institution"."kind"
          FROM "institutions_institutionmembership"
          INNER JOIN "institutions_institution" ON ("institutions_institutionmembership"."institution_id" = "institutions_institution"."id")
          WHERE ("institutions_institutionmembership"."is_active"
                 AND "institutions_institutionmembership"."user_id" = %s)
          ORDER BY "institutions_institutionmembership"."joined_at" ASC
        ''',
      }),
      dict({
        'origin': list([
          'Atomic.__enter__[<site-packages>/django/db/transaction.py]',
        ]),
        'sql': 'SAVEPOINT "<snapshot>"',
      }),
      dict({
        'origin': list([
          'evaluated_siae_sanction[www/siae_evaluations_views/views.py]',
          '_check_user_view_wrapper[utils/auth.py]',
        ]),
        'sql': '''
          SELECT "siae_evaluations_evaluatedsiae"."id",
                 "siae_evaluations_evaluatedsiae"."evaluation_campaign_id",
                 "siae_evaluations_evaluatedsiae"."siae_id",
                 "siae_evaluations_evaluatedsiae"."reviewed_at",
                 "siae_evaluations_evaluatedsiae"."final_reviewed_at",
                 "siae_evaluations_evaluatedsiae"."submission_freezed_at",
                 "siae_evaluations_evaluatedsiae"."notified_at",
                 "siae_evaluations_evaluatedsiae"."notification_reason",
                 "siae_evaluations_evaluatedsiae"."notification_text",
                 "siae_evaluations_evaluatedsiae"."reminder_sent_at",
                 "siae_evaluations_evaluatedsiae"."final_state",
                 "siae_evaluations_evaluatedsiae"."archive_accepted_job_applications_nb",
                 "siae_evaluations_evaluationcampaign"."id",
                 "siae_evaluations_evaluationcampaign"."name",
                 "siae_evaluations_evaluationcampaign"."created_at",
                 "siae_evaluations_evaluationcampaign"."percent_set_at",
                 "siae_evaluations_evaluationcampaign"."evaluations_asked_at",
                 "siae_evaluations_evaluationcampaign"."ended_at",
                 "siae_evaluations_evaluationcampaign"."submission_freeze_notified_at",
                 "siae_evaluations_evaluationcampaign"."evaluated_period_start_at",
                 "siae_evaluations_evaluationcampaign"."evaluated_period_end_at",
                 "siae_evaluations_evaluationcampaign"."institution_id",
                 "siae_evaluations_evaluationcampaign"."chosen_percent",
                 "siae_evaluations_evaluationcampaign"."calendar_id",
                 "siae_evaluations_sanctions"."id",
                 "siae_evaluations_sanctions"."evaluated_siae_id",
                 "siae_evaluations_sanctions"."training_session",
                 "siae_evaluations_sanctions"."suspension_dates",
                 "siae_evaluations_sanctions"."subsidy_cut_percent",
                 "siae_evaluations_sanctions"."subsidy_cut_dates",
                 "siae_evaluations_sanctions"."no_sanction_reason"
          FROM "siae_evaluations_evaluatedsiae"
          INNER JOIN "siae_evaluations_evaluationcampaign" ON ("siae_evaluations_evaluatedsiae"."evaluation_campaign_id" = "siae_evaluations_evaluationcampaign"."id")
          LEFT OUTER JOIN "siae_evaluations_sanctions" ON ("siae_evaluations_evaluatedsiae"."id" = "siae_evaluations_sanctions"."evaluated_siae_id")
          WHERE ("siae_evaluations_evaluationcampaign"."institution_id" = %s
                 AND "siae_evaluations_evaluatedsiae"."id" = %s
                 AND NOT ("siae_evaluations_evaluatedsiae"."notified_at" IS NULL))
          LIMIT 21
        ''',
      }),
      dict({
        'origin': list([
          'evaluation_campaign_data_context[www/siae_evaluations_views/views.py]',
          'evaluated_siae_sanction[www/siae_evaluations_views/views.py]',
          '_check_user_view_wrapper[utils/auth.py]',
        ]),
        'sql': '''
          SELECT "siae_evaluations_evaluatedjobapplication"."id",
                 "siae_evaluations_evaluatedjobapplication"."job_application_id",
                 "siae_evaluations_evaluatedjobapplication"."evaluated_siae_id",
                 "siae_evaluations_evaluatedjobapplication"."labor_inspector_explanation"
          FROM "siae_evaluations_evaluatedjobapplication"
          WHERE "siae_evaluations_evaluatedjobapplication"."evaluated_siae_id" = %s
          ORDER BY RANDOM() ASC
        ''',
      }),
      dict({
        'origin': list([
          'evaluation_campaign_data_context[www/siae_evaluations_views/views.py]',
          'evaluated_siae_sanction[www/siae_evaluations_views/views.py]',
          '_check_user_view_wrapper[utils/auth.py]',
        ]),
        'sql': '''
          SELECT "siae_evaluations_evaluatedadministrativecriteria"."id",
                 "siae_evaluations_evaluatedadministrativecriteria"."administrative_criteria_id",
                 "siae_evaluations_evaluatedadministrativecriteria"."evaluated_job_application_id",
                 "siae_evaluations_evaluatedadministrativecriteria"."proof_id",
                 "siae_evaluations_evaluatedadministrativecriteria"."uploaded_at",
                 "siae_evaluations_evaluatedadministrativecriteria"."submitted_at",
                 "siae_evaluations_evaluatedadministrativecriteria"."review_state",
                 "siae_evaluations_evaluatedadministrativecriteria"."criteria_certified"
          FROM "siae_evaluations_evaluatedadministrativecriteria"
          INNER JOIN "eligibility_administrativecriteria" ON ("siae_evaluations_evaluatedadministrativecriteria"."administrative_criteria_id" = "eligibility_administrativecriteria"."id")
          WHERE "siae_evaluations_evaluatedadministrativecriteria"."evaluated_job_application_id" = %s
          ORDER BY "siae_evaluations_evaluatedadministrativecriteria"."evaluated_job_application_id" ASC,
                   "eligibility_administrativecriteria"."level" ASC,
                   "eligibility_administrativecriteria"."ui_rank" ASC
        ''',
      }),
      dict({
        'origin': list([
          'VariableNode[siae_evaluations/evaluated_siae_sanction.html]',
          'BlockNode[layout/base.html]',
          'ExtendsNode[siae_evaluations/evaluated_siae_sanction.html]',
          'evaluated_siae_sanction[www/siae_evaluations_views/views.py]',
          '_check_user_view_wrapper[utils/auth.py]',
        ]),
        'sql': '''
          SELECT "companies_company"."id",
                 "companies_company"."address_line_1",
                 "companies_company"."address_line_2",
                 "companies_company"."post_code",
                 "companies_company"."city",
                 "companies_company"."department",
                 "companies_company"."coords",
                 "companies_company"."geocoding_score",
                 "companies_company"."geocoding_updated_at",
                 "companies_company"."ban_api_resolved_address",
                 "companies_company"."insee_city_id",
                 "companies_company"."name",
                 "companies_company"."created_at",
                 "companies_company"."updated_at",
                 "companies_company"."uid",
                 "companies_company"."active_members_email_reminder_last_sent_at",
                 "companies_company"."automatic_geocoding_update",
                 "companies_company"."siret",
                 "companies_company"."naf",
                 "companies_company"."kind",
                 "companies_company"."brand",
                 "companies_company"."phone",
                 "companies_company"."email",
                 "companies_company"."auth_email",
                 "companies_company"."website",
                 "companies_company"."description",
                 "companies_company"."provided_support",
                 "companies_company"."source",
                 "companies_company"."created_by_id",
                 "companies_company"."block_job_applications",
                 "companies_company"."job_applications_blocked_at",
                 "companies_company"."spontaneous_applications_open_since",
                 "companies_company"."convention_id",
                 "companies_company"."job_app_score",
                 "companies_company"."is_searchable",
                 "companies_company"."rdv_solidarites_id",
                 "companies_company"."fields_history"
          FROM "companies_company"
          WHERE "companies_company"."id" = %s
          LIMIT 21
        ''',
      }),
      dict({
        'origin': list([
          'ForNode[siae_evaluations/includes/evaluation_data.html]',
          'IncludeNode[siae_evaluations/evaluated_siae_sanction.html]',
          'BlockNode[layout/base.html]',
          'ExtendsNode[siae_evaluations/evaluated_siae_sanction.html]',
          'evaluated_siae_sanction[www/siae_evaluations_views/views.py]',
          '_check_user_view_wrapper[utils/auth.py]',
        ]),
        'sql': '''
          SELECT "siae_evaluations_evaluatedsiae"."id",
                 "siae_evaluations_evaluatedsiae"."evaluation_campaign_id",
                 "siae_evaluations_evaluatedsiae"."siae_id",
                 "siae_evaluations_evaluatedsiae"."reviewed_at",
                 "siae_evaluations_evaluatedsiae"."final_reviewed_at",
                 "siae_evaluations_evaluatedsiae"."submission_freezed_at",
                 "siae_evaluations_evaluatedsiae"."notified_at",
                 "siae_evaluations_evaluatedsiae"."notification_reason",
                 "siae_evaluations_evaluatedsiae"."notification_text",
                 "siae_evaluations_evaluatedsiae"."reminder_sent_at",
                 "siae_evaluations_evaluatedsiae"."final_state",
                 "siae_evaluations_evaluatedsiae"."archive_accepted_job_applications_nb",
                 "siae_evaluations_evaluationcampaign"."id",
                 "siae_evaluations_evaluationcampaign"."name",
                 "siae_evaluations_evaluationcampaign"."created_at",
                 "siae_evaluations_evaluationcampaign"."percent_set_at",
                 "siae_evaluations_evaluationcampaign"."evaluations_asked_at",
                 "siae_evaluations_evaluationcampaign"."ended_at",
                 "siae_evaluations_evaluationcampaign"."submission_freeze_notified_at",
                 "siae_evaluations_evaluationcampaign"."evaluated_period_start_at",
                 "siae_evaluations_evaluationcampaign"."evaluated_period_end_at",
                 "siae_evaluations_evaluationcampaign"."institution_id",
                 "siae_evaluations_evaluationcampaign"."chosen_percent",
                 "siae_evaluations_evaluationcampaign"."calendar_id",
                 "siae_evaluations_sanctions"."id",
                 "siae_evaluations_sanctions"."evaluated_siae_id",
                 "siae_evaluations_sanctions"."training_session",
                 "siae_evaluations_sanctions"."suspension_dates",
                 "siae_evaluations_sanctions"."subsidy_cut_percent",
                 "siae_evaluations_sanctions"."subsidy_cut_dates",
                 "siae_evaluations_sanctions"."no_sanction_reason"
          FROM "siae_evaluations_evaluatedsiae"
          INNER JOIN "siae_evaluations_evaluationcampaign" ON ("siae_evaluations_evaluatedsiae"."evaluation_campaign_id" = "siae_evaluations_evaluationcampaign"."id")
          LEFT OUTER JOIN "siae_evaluations_sanctions" ON ("siae_evaluations_evaluatedsiae"."id" = "siae_evaluations_sanctions"."evaluated_siae_id")
          WHERE ("siae_evaluations_evaluatedsiae"."evaluation_campaign_id" IN
                   (SELECT U0."id"
                    FROM "siae_evaluations_evaluationcampaign" U0
                    WHERE ((U0."ended_at" IS NULL
                            OR U0."ended_at" >= %s)
                           AND NOT (U0."evaluated_period_end_at" < %s)))
                 AND "siae_evaluations_evaluatedsiae"."siae_id" = %s
                 AND NOT ("siae_evaluations_evaluatedsiae"."id" = %s))
          ORDER BY "siae_evaluations_evaluationcampaign"."evaluated_period_start_at" DESC
        ''',
      }),
      dict({
        'origin': list([
          'ForNode[siae_evaluations/includes/evaluation_data.html]',
          'IncludeNode[siae_evaluations/evaluated_siae_sanction.html]',
          'BlockNode[layout/base.html]',
          'ExtendsNode[siae_evaluations/evaluated_siae_sanction.html]',
          'evaluated_siae_sanction[www/siae_evaluations_views/views.py]',
          '_check_user_view_wrapper[utils/auth.py]',
        ]),
        'sql': '''
          SELECT "siae_evaluations_evaluatedjobapplication"."id",
                 "siae_evaluations_evaluatedjobapplication"."job_application_id",
                 "siae_evaluations_evaluatedjobapplication"."evaluated_siae_id",
                 "siae_evaluations_evaluatedjobapplication"."labor_inspector_explanation"
          FROM "siae_evaluations_evaluatedjobapplication"
          WHERE "siae_evaluations_evaluatedjobapplication"."evaluated_siae_id" IN (%s,
                                                                                   %s,
                                                                                   %s)
          ORDER BY RANDOM() ASC
        ''',
      }),
      dict({
        'origin': list([
          'ForNode[siae_evaluations/includes/evaluation_data.html]',
          'IncludeNode[siae_evaluations/evaluated_siae_sanction.html]',
          'BlockNode[layout/base.html]',
          'ExtendsNode[siae_evaluations/evaluated_siae_sanction.html]',
          'evaluated_siae_sanction[www/siae_evaluations_views/views.py]',
          '_check_user_view_wrapper[utils/auth.py]',
        ]),
        'sql': '''
          SELECT "siae_evaluations_evaluatedadministrativecriteria"."id",
                 "siae_evaluations_evaluatedadministrativecriteria"."administrative_criteria_id",
                 "siae_evaluations_evaluatedadministrativecriteria"."evaluated_job_application_id",
                 "siae_evaluations_evaluatedadministrativecriteria"."proof_id",
                 "siae_evaluations_evaluatedadministrativecriteria"."uploaded_at",
                 "siae_evaluations_evaluatedadministrativecriteria"."submitted_at",
                 "siae_evaluations_evaluatedadministrativecriteria"."review_state",
                 "siae_evaluations_evaluatedadministrativecriteria"."criteria_certified"
          FROM "siae_evaluations_evaluatedadministrativecriteria"
          INNER JOIN "eligibility_administrativecriteria" ON ("siae_evaluations_evaluatedadministrativecriteria"."administrative_criteria_id" = "eligibility_administrativecriteria"."id")
          WHERE "siae_evaluations_evaluatedadministrativecriteria"."evaluated_job_application_id" IN (%s,
                                                                                                      %s,
                                                                                                      %s)
          ORDER BY "siae_evaluations_evaluatedadministrativecriteria"."evaluated_job_application_id" ASC,
                   "eligibility_administrativecriteria"."level" ASC,
                   "eligibility_administrativecriteria"."ui_rank" ASC
        ''',
      }),
      dict({
        'origin': list([
          'Atomic.__exit__[<site-packages>/django/db/transaction.py]',
        ]),
        'sql': 'RELEASE SAVEPOINT "<snapshot>"',
      }),
      dict({
        'origin': list([
          'Atomic.__enter__[<site-packages>/django/db/transaction.py]',
          'SessionStore.save[<site-packages>/django/contrib/sessions/backends/db.py]',
        ]),
        'sql': 'SAVEPOINT "<snapshot>"',
      }),
      dict({
        'origin': list([
          'Session.save[<site-packages>/django/db/models/base.py]',
          'SessionStore.save[<site-packages>/django/contrib/sessions/backends/db.py]',
        ]),
        'sql': '''
          UPDATE "django_session"
          SET "session_data" = %s,
              "expire_date" = %s
          WHERE "django_session"."session_key" = %s
        ''',
      }),
      dict({
        'origin': list([
          'Atomic.__exit__[<site-packages>/django/db/transaction.py]',
          'SessionStore.save[<site-packages>/django/contrib/sessions/backends/db.py]',
        ]),
        'sql': 'RELEASE SAVEPOINT "<snapshot>"',
      }),
    ]),
  })
# ---
# name: TestEvaluatedSiaeSanctionView.test_temporary_suspension
  '''
  <div class="card-body">
      <h2>
          Sanction
      </h2>
      <h3 class="mt-5">
          Retrait temporaire de la capacité d’auto-prescription
      </h3>
      <p>
          La capacité d’auto-prescrire un parcours d'insertion par l'activité économique est suspendue pour une durée déterminée par l'autorité administrative.
      </p>
      <p>
          Dans votre cas, le retrait temporaire de la capacité d’auto-prescription sera effectif à partir du 1 janvier 2023 et jusqu’au 1 juin 2023.
      </p>
  </div>
  
  '''
# ---
# name: TestEvaluatedSiaeSanctionView.test_training_session
  '''
  <div class="card-body">
      <h2>
          Sanction
      </h2>
      <h3 class="mt-5">
          Participation à une session de présentation de l’auto-prescription
      </h3>
      <div class="card">
          <div class="card-body">
              <p>
                  RDV le 18 avril à 14h dans les locaux de Pôle Emploi.
              </p>
          </div>
      </div>
  </div>
  
  '''
# ---
# name: TestEvaluatedSiaeSanctionView.test_view_as_institution[queries]
  dict({
    'num_queries': 15,
    'queries': list([
      dict({
        'origin': list([
          'SessionStore._get_session_from_db[<site-packages>/django/contrib/sessions/backends/db.py]',
        ]),
        'sql': '''
          SELECT "django_session"."session_key",
                 "django_session"."session_data",
                 "django_session"."expire_date"
          FROM "django_session"
          WHERE ("django_session"."expire_date" > %s
                 AND "django_session"."session_key" = %s)
          LIMIT 21
        ''',
      }),
      dict({
        'origin': list([
          'ItouCurrentOrganizationMiddleware.__call__[utils/perms/middleware.py]',
        ]),
        'sql': '''
          SELECT "users_user"."id",
                 "users_user"."password",
                 "users_user"."last_login",
                 "users_user"."is_superuser",
                 "users_user"."username",
                 "users_user"."first_name",
                 "users_user"."last_name",
                 "users_user"."is_staff",
                 "users_user"."is_active",
                 "users_user"."date_joined",
                 "users_user"."address_line_1",
                 "users_user"."address_line_2",
                 "users_user"."post_code",
                 "users_user"."city",
                 "users_user"."department",
                 "users_user"."coords",
                 "users_user"."geocoding_score",
                 "users_user"."geocoding_updated_at",
                 "users_user"."ban_api_resolved_address",
                 "users_user"."insee_city_id",
                 "users_user"."title",
                 "users_user"."full_name_search_vector",
                 "users_user"."email",
                 "users_user"."phone",
                 "users_user"."kind",
                 "users_user"."identity_provider",
                 "users_user"."has_completed_welcoming_tour",
                 "users_user"."created_by_id",
                 "users_user"."external_data_source_history",
                 "users_user"."last_checked_at",
                 "users_user"."public_id",
                 "users_user"."address_filled_at",
                 "users_user"."first_login",
                 "users_user"."upcoming_deletion_notified_at",
                 "users_user"."allow_next_sso_sub_update"
          FROM "users_user"
          WHERE "users_user"."id" = %s
          LIMIT 21
        ''',
      }),
      dict({
        'origin': list([
          'extract_membership_infos_and_update_session[utils/perms/middleware.py]',
          'ItouCurrentOrganizationMiddleware.__call__[utils/perms/middleware.py]',
        ]),
        'sql': '''
          SELECT "institutions_institutionmembership"."id",
                 "institutions_institutionmembership"."user_id",
                 "institutions_institutionmembership"."joined_at",
                 "institutions_institutionmembership"."is_admin",
                 "institutions_institutionmembership"."is_active",
                 "institutions_institutionmembership"."created_at",
                 "institutions_institutionmembership"."updated_at",
                 "institutions_institutionmembership"."institution_id",
                 "institutions_institutionmembership"."updated_by_id",
                 "institutions_institution"."id",
                 "institutions_institution"."address_line_1",
                 "institutions_institution"."address_line_2",
                 "institutions_institution"."post_code",
                 "institutions_institution"."city",
                 "institutions_institution"."department",
                 "institutions_institution"."coords",
                 "institutions_institution"."geocoding_score",
                 "institutions_institution"."geocoding_updated_at",
                 "institutions_institution"."ban_api_resolved_address",
                 "institutions_institution"."insee_city_id",
                 "institutions_institution"."name",
                 "institutions_institution"."created_at",
                 "institutions_institution"."updated_at",
                 "institutions_institution"."uid",
                 "institutions_institution"."active_members_email_reminder_last_sent_at",
                 "institutions_institution"."automatic_geocoding_update",
                 "institutions_institution"."kind"
          FROM "institutions_institutionmembership"
          INNER JOIN "institutions_institution" ON ("institutions_institutionmembership"."institution_id" = "institutions_institution"."id")
          WHERE ("institutions_institutionmembership"."is_active"
                 AND "institutions_institutionmembership"."user_id" = %s)
          ORDER BY "institutions_institutionmembership"."joined_at" ASC
        ''',
      }),
      dict({
        'origin': list([
          'Atomic.__enter__[<site-packages>/django/db/transaction.py]',
        ]),
        'sql': 'SAVEPOINT "<snapshot>"',
      }),
      dict({
        'origin': list([
          'evaluated_siae_sanction[www/siae_evaluations_views/views.py]',
          '_check_user_view_wrapper[utils/auth.py]',
        ]),
        'sql': '''
          SELECT "siae_evaluations_evaluatedsiae"."id",
                 "siae_evaluations_evaluatedsiae"."evaluation_campaign_id",
                 "siae_evaluations_evaluatedsiae"."siae_id",
                 "siae_evaluations_evaluatedsiae"."reviewed_at",
                 "siae_evaluations_evaluatedsiae"."final_reviewed_at",
                 "siae_evaluations_evaluatedsiae"."submission_freezed_at",
                 "siae_evaluations_evaluatedsiae"."notified_at",
                 "siae_evaluations_evaluatedsiae"."notification_reason",
                 "siae_evaluations_evaluatedsiae"."notification_text",
                 "siae_evaluations_evaluatedsiae"."reminder_sent_at",
                 "siae_evaluations_evaluatedsiae"."final_state",
                 "siae_evaluations_evaluatedsiae"."archive_accepted_job_applications_nb",
                 "siae_evaluations_evaluationcampaign"."id",
                 "siae_evaluations_evaluationcampaign"."name",
                 "siae_evaluations_evaluationcampaign"."created_at",
                 "siae_evaluations_evaluationcampaign"."percent_set_at",
                 "siae_evaluations_evaluationcampaign"."evaluations_asked_at",
                 "siae_evaluations_evaluationcampaign"."ended_at",
                 "siae_evaluations_evaluationcampaign"."submission_freeze_notified_at",
                 "siae_evaluations_evaluationcampaign"."evaluated_period_start_at",
                 "siae_evaluations_evaluationcampaign"."evaluated_period_end_at",
                 "siae_evaluations_evaluationcampaign"."institution_id",
                 "siae_evaluations_evaluationcampaign"."chosen_percent",
                 "siae_evaluations_evaluationcampaign"."calendar_id",
                 "siae_evaluations_sanctions"."id",
                 "siae_evaluations_sanctions"."evaluated_siae_id",
                 "siae_evaluations_sanctions"."training_session",
                 "siae_evaluations_sanctions"."suspension_dates",
                 "siae_evaluations_sanctions"."subsidy_cut_percent",
                 "siae_evaluations_sanctions"."subsidy_cut_dates",
                 "siae_evaluations_sanctions"."no_sanction_reason"
          FROM "siae_evaluations_evaluatedsiae"
          INNER JOIN "siae_evaluations_evaluationcampaign" ON ("siae_evaluations_evaluatedsiae"."evaluation_campaign_id" = "siae_evaluations_evaluationcampaign"."id")
          LEFT OUTER JOIN "siae_evaluations_sanctions" ON ("siae_evaluations_evaluatedsiae"."id" = "siae_evaluations_sanctions"."evaluated_siae_id")
          WHERE ("siae_evaluations_evaluationcampaign"."institution_id" = %s
                 AND "siae_evaluations_evaluatedsiae"."id" = %s
                 AND NOT ("siae_evaluations_evaluatedsiae"."notified_at" IS NULL))
          LIMIT 21
        ''',
      }),
      dict({
        'origin': list([
          'evaluation_campaign_data_context[www/siae_evaluations_views/views.py]',
          'evaluated_siae_sanction[www/siae_evaluations_views/views.py]',
          '_check_user_view_wrapper[utils/auth.py]',
        ]),
        'sql': '''
          SELECT "siae_evaluations_evaluatedjobapplication"."id",
                 "siae_evaluations_evaluatedjobapplication"."job_application_id",
                 "siae_evaluations_evaluatedjobapplication"."evaluated_siae_id",
                 "siae_evaluations_evaluatedjobapplication"."labor_inspector_explanation"
          FROM "siae_evaluations_evaluatedjobapplication"
          WHERE "siae_evaluations_evaluatedjobapplication"."evaluated_siae_id" = %s
          ORDER BY RANDOM() ASC
        ''',
      }),
      dict({
        'origin': list([
          'evaluation_campaign_data_context[www/siae_evaluations_views/views.py]',
          'evaluated_siae_sanction[www/siae_evaluations_views/views.py]',
          '_check_user_view_wrapper[utils/auth.py]',
        ]),
        'sql': '''
          SELECT "siae_evaluations_evaluatedadministrativecriteria"."id",
                 "siae_evaluations_evaluatedadministrativecriteria"."administrative_criteria_id",
                 "siae_evaluations_evaluatedadministrativecriteria"."evaluated_job_application_id",
                 "siae_evaluations_evaluatedadministrativecriteria"."proof_id",
                 "siae_evaluations_evaluatedadministrativecriteria"."uploaded_at",
                 "siae_evaluations_evaluatedadministrativecriteria"."submitted_at",
                 "siae_evaluations_evaluatedadministrativecriteria"."review_state",
                 "siae_evaluations_evaluatedadministrativecriteria"."criteria_certified"
          FROM "siae_evaluations_evaluatedadministrativecriteria"
          INNER JOIN "eligibility_administrativecriteria" ON ("siae_evaluations_evaluatedadministrativecriteria"."administrative_criteria_id" = "eligibility_administrativecriteria"."id")
          WHERE "siae_evaluations_evaluatedadministrativecriteria"."evaluated_job_application_id" = %s
          ORDER BY "siae_evaluations_evaluatedadministrativecriteria"."evaluated_job_application_id" ASC,
                   "eligibility_administrativecriteria"."level" ASC,
                   "eligibility_administrativecriteria"."ui_rank" ASC
        ''',
      }),
      dict({
        'origin': list([
          'VariableNode[siae_evaluations/evaluated_siae_sanction.html]',
          'BlockNode[layout/base.html]',
          'ExtendsNode[siae_evaluations/evaluated_siae_sanction.html]',
          'evaluated_siae_sanction[www/siae_evaluations_views/views.py]',
          '_check_user_view_wrapper[utils/auth.py]',
        ]),
        'sql': '''
          SELECT "companies_company"."id",
                 "companies_company"."address_line_1",
                 "companies_company"."address_line_2",
                 "companies_company"."post_code",
                 "companies_company"."city",
                 "companies_company"."department",
                 "companies_company"."coords",
                 "companies_company"."geocoding_score",
                 "companies_company"."geocoding_updated_at",
                 "companies_company"."ban_api_resolved_address",
                 "companies_company"."insee_city_id",
                 "companies_company"."name",
                 "companies_company"."created_at",
                 "companies_company"."updated_at",
                 "companies_company"."uid",
                 "companies_company"."active_members_email_reminder_last_sent_at",
                 "companies_company"."automatic_geocoding_update",
                 "companies_company"."siret",
                 "companies_company"."naf",
                 "companies_company"."kind",
                 "companies_company"."brand",
                 "companies_company"."phone",
                 "companies_company"."email",
                 "companies_company"."auth_email",
                 "companies_company"."website",
                 "companies_company"."description",
                 "companies_company"."provided_support",
                 "companies_company"."source",
                 "companies_company"."created_by_id",
                 "companies_company"."block_job_applications",
                 "companies_company"."job_applications_blocked_at",
                 "companies_company"."spontaneous_applications_open_since",
                 "companies_company"."convention_id",
                 "companies_company"."job_app_score",
                 "companies_company"."is_searchable",
                 "companies_company"."rdv_solidarites_id",
                 "companies_company"."fields_history"
          FROM "companies_company"
          WHERE "companies_company"."id" = %s
          LIMIT 21
        ''',
      }),
      dict({
        'origin': list([
          'ForNode[siae_evaluations/includes/evaluation_data.html]',
          'IncludeNode[siae_evaluations/evaluated_siae_sanction.html]',
          'BlockNode[layout/base.html]',
          'ExtendsNode[siae_evaluations/evaluated_siae_sanction.html]',
          'evaluated_siae_sanction[www/siae_evaluations_views/views.py]',
          '_check_user_view_wrapper[utils/auth.py]',
        ]),
        'sql': '''
          SELECT "siae_evaluations_evaluatedsiae"."id",
                 "siae_evaluations_evaluatedsiae"."evaluation_campaign_id",
                 "siae_evaluations_evaluatedsiae"."siae_id",
                 "siae_evaluations_evaluatedsiae"."reviewed_at",
                 "siae_evaluations_evaluatedsiae"."final_reviewed_at",
                 "siae_evaluations_evaluatedsiae"."submission_freezed_at",
                 "siae_evaluations_evaluatedsiae"."notified_at",
                 "siae_evaluations_evaluatedsiae"."notification_reason",
                 "siae_evaluations_evaluatedsiae"."notification_text",
                 "siae_evaluations_evaluatedsiae"."reminder_sent_at",
                 "siae_evaluations_evaluatedsiae"."final_state",
                 "siae_evaluations_evaluatedsiae"."archive_accepted_job_applications_nb",
                 "siae_evaluations_evaluationcampaign"."id",
                 "siae_evaluations_evaluationcampaign"."name",
                 "siae_evaluations_evaluationcampaign"."created_at",
                 "siae_evaluations_evaluationcampaign"."percent_set_at",
                 "siae_evaluations_evaluationcampaign"."evaluations_asked_at",
                 "siae_evaluations_evaluationcampaign"."ended_at",
                 "siae_evaluations_evaluationcampaign"."submission_freeze_notified_at",
                 "siae_evaluations_evaluationcampaign"."evaluated_period_start_at",
                 "siae_evaluations_evaluationcampaign"."evaluated_period_end_at",
                 "siae_evaluations_evaluationcampaign"."institution_id",
                 "siae_evaluations_evaluationcampaign"."chosen_percent",
                 "siae_evaluations_evaluationcampaign"."calendar_id",
                 "siae_evaluations_sanctions"."id",
                 "siae_evaluations_sanctions"."evaluated_siae_id",
                 "siae_evaluations_sanctions"."training_session",
                 "siae_evaluations_sanctions"."suspension_dates",
                 "siae_evaluations_sanctions"."subsidy_cut_percent",
                 "siae_evaluations_sanctions"."subsidy_cut_dates",
                 "siae_evaluations_sanctions"."no_sanction_reason"
          FROM "siae_evaluations_evaluatedsiae"
          INNER JOIN "siae_evaluations_evaluationcampaign" ON ("siae_evaluations_evaluatedsiae"."evaluation_campaign_id" = "siae_evaluations_evaluationcampaign"."id")
          LEFT OUTER JOIN "siae_evaluations_sanctions" ON ("siae_evaluations_evaluatedsiae"."id" = "siae_evaluations_sanctions"."evaluated_siae_id")
          WHERE ("siae_evaluations_evaluatedsiae"."evaluation_campaign_id" IN
                   (SELECT U0."id"
                    FROM "siae_evaluations_evaluationcampaign" U0
                    WHERE ((U0."ended_at" IS NULL
                            OR U0."ended_at" >= %s)
                           AND NOT (U0."evaluated_period_end_at" < %s)))
                 AND "siae_evaluations_evaluatedsiae"."siae_id" = %s
                 AND NOT ("siae_evaluations_evaluatedsiae"."id" = %s))
          ORDER BY "siae_evaluations_evaluationcampaign"."evaluated_period_start_at" DESC
        ''',
      }),
      dict({
        'origin': list([
          'ForNode[siae_evaluations/includes/evaluation_data.html]',
          'IncludeNode[siae_evaluations/evaluated_siae_sanction.html]',
          'BlockNode[layout/base.html]',
          'ExtendsNode[siae_evaluations/evaluated_siae_sanction.html]',
          'evaluated_siae_sanction[www/siae_evaluations_views/views.py]',
          '_check_user_view_wrapper[utils/auth.py]',
        ]),
        'sql': '''
          SELECT "siae_evaluations_evaluatedjobapplication"."id",
                 "siae_evaluations_evaluatedjobapplication"."job_application_id",
                 "siae_evaluations_evaluatedjobapplication"."evaluated_siae_id",
                 "siae_evaluations_evaluatedjobapplication"."labor_inspector_explanation"
          FROM "siae_evaluations_evaluatedjobapplication"
          WHERE "siae_evaluations_evaluatedjobapplication"."evaluated_siae_id" IN (%s,
                                                                                   %s,
                                                                                   %s)
          ORDER BY RANDOM() ASC
        ''',
      }),
      dict({
        'origin': list([
          'ForNode[siae_evaluations/includes/evaluation_data.html]',
          'IncludeNode[siae_evaluations/evaluated_siae_sanction.html]',
          'BlockNode[layout/base.html]',
          'ExtendsNode[siae_evaluations/evaluated_siae_sanction.html]',
          'evaluated_siae_sanction[www/siae_evaluations_views/views.py]',
          '_check_user_view_wrapper[utils/auth.py]',
        ]),
        'sql': '''
          SELECT "siae_evaluations_evaluatedadministrativecriteria"."id",
                 "siae_evaluations_evaluatedadministrativecriteria"."administrative_criteria_id",
                 "siae_evaluations_evaluatedadministrativecriteria"."evaluated_job_application_id",
                 "siae_evaluations_evaluatedadministrativecriteria"."proof_id",
                 "siae_evaluations_evaluatedadministrativecriteria"."uploaded_at",
                 "siae_evaluations_evaluatedadministrativecriteria"."submitted_at",
                 "siae_evaluations_evaluatedadministrativecriteria"."review_state",
                 "siae_evaluations_evaluatedadministrativecriteria"."criteria_certified"
          FROM "siae_evaluations_evaluatedadministrativecriteria"
          INNER JOIN "eligibility_administrativecriteria" ON ("siae_evaluations_evaluatedadministrativecriteria"."administrative_criteria_id" = "eligibility_administrativecriteria"."id")
          WHERE "siae_evaluations_evaluatedadministrativecriteria"."evaluated_job_application_id" IN (%s,
                                                                                                      %s,
                                                                                                      %s)
          ORDER BY "siae_evaluations_evaluatedadministrativecriteria"."evaluated_job_application_id" ASC,
                   "eligibility_administrativecriteria"."level" ASC,
                   "eligibility_administrativecriteria"."ui_rank" ASC
        ''',
      }),
      dict({
        'origin': list([
          'Atomic.__exit__[<site-packages>/django/db/transaction.py]',
        ]),
        'sql': 'RELEASE SAVEPOINT "<snapshot>"',
      }),
      dict({
        'origin': list([
          'Atomic.__enter__[<site-packages>/django/db/transaction.py]',
          'SessionStore.save[<site-packages>/django/contrib/sessions/backends/db.py]',
        ]),
        'sql': 'SAVEPOINT "<snapshot>"',
      }),
      dict({
        'origin': list([
          'Session.save[<site-packages>/django/db/models/base.py]',
          'SessionStore.save[<site-packages>/django/contrib/sessions/backends/db.py]',
        ]),
        'sql': '''
          UPDATE "django_session"
          SET "session_data" = %s,
              "expire_date" = %s
          WHERE "django_session"."session_key" = %s
        ''',
      }),
      dict({
        'origin': list([
          'Atomic.__exit__[<site-packages>/django/db/transaction.py]',
          'SessionStore.save[<site-packages>/django/contrib/sessions/backends/db.py]',
        ]),
        'sql': 'RELEASE SAVEPOINT "<snapshot>"',
      }),
    ]),
  })
# ---
